# diagramz

./: .gitignore  Cargo.toml  README.md  architecture.puml  package.json  pnpm-lock.yaml
apps/api/: Cargo.toml  package.json
apps/api/src/: app.ts  db.rs  index.ts  main.rs  routes.rs  store.ts
apps/api/src/routes/: diagrams.ts
apps/web/: index.html  next.config.ts  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  api.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/d/[id]/: page.tsx
apps/web/src/components/: DiagramCanvas.tsx  Toolbar.tsx
apps/web/src/pages/: DiagramPage.tsx  Home.tsx
docs/: sdk-architecture.puml  sdk-implementation.puml
docs/plans/: sdk-implementation.md
docs/research/: 2026-03-05-ai-diagram-tool-research.md
examples/: architecture.js  c4-context.js  c4-diagramz.js  connection-arch.js  ecommerce-classes.js  hello.js
