[package]
name = "diagramz-api"
version = "0.1.0"
edition = "2021"

[dependencies]
diagramz-renderer = { path = "../../packages/renderer" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
async-stream = "0.3"
futures-util = "0.3"
